# image_captioning

./: README.md  evaluate.py  extract_image_features.py  image_utils.py  pyproject.toml  train.py  train_search.py  visualize_attention.ipynb
experiments/flickr30k/: config_base.libsonnet  show_attend_rnn.jsonnet  show_attend_rnn_best.json  show_attend_rnn_reinforce.jsonnet  show_attend_rnn_reinforce_best.json  show_tell_rnn.jsonnet  show_tell_rnn_best.json
experiments/flickr8k/: config_base.libsonnet  show_attend_rnn_best.json  show_attend_rnn_reinforce.jsonnet  show_attend_rnn_reinforce_best.json  show_tell_rnn_best.json
experiments/model_configs/: show_attend_rnn.libsonnet  show_attend_rnn_debug.libsonnet  show_tell_rnn.libsonnet  show_tell_rnn_debug.libsonnet
experiments/search_configs/: search.json  search_finetune.json
models/: image_caption_generator.py  model_util.py  sequence_generator.py  sequence_reinforce.py  utils.py
models/callbacks/: log_tokens.py
models/image_feature_processor/: __init__.py  fixed_length_feature.py  image_feature_processor.py  sequence_feature.py
models/metrics/: loss_to_perplexity.py  mean.py  standard_deviation.py  tensor_bleu.py  utils.py
models/sequence_decoders/: __init__.py  bahdanau2015_decoder.py  luong2015_decoder.py  rnn_decoder.py  self_attention_decoder.py  sequence_decoder_base.py  transformer_decoder.py
models/sequence_metrics/: sequence_bleu.py  sequence_metric.py
models/submodules/: embedding_layer.py  locked_dropout.py  sampling.py  scable_embedding.py  stacked_rnn.py  torch_rnn_wrapper.py  (+1 more)
(+1 files in other folders)
