[tool.poetry]
name = "image_captioning"
version = "0.1.0"
description = ""
authors = ["Ryokan Ri <ryou0634@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.1"
jupyter = "^1.0.0"
torchvision = "^0.6.1"
click = "^7.1.2"
allennlp = "^1.0.0"
jsonnet = "^0.16.0"
matplotlib = "^3.3.0"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

